# fem_rust_ae

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  convergence.rs  fem_model.rs  fem_solver.rs  main.rs
